--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+gsheetsdb==0.1.13.1
 numpy==1.24.2
-opencv-python
+opencv_python
 pandas==2.0.2
 Pillow
+protobuf==3.20
 streamlit
 tensorflow
 tensorflow_intel
-protobuf==3.20
-gsheetsdb==0.1.13.1
+pyparsing
